# argus

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py  base.py  gdelt.py
config/: sources.yaml
crates/argus-agents/: Cargo.toml
crates/argus-agents/src/: adsb.rs  ais.rs  eu_transparency.rs  gdelt.rs  lib.rs  opencorporates.rs  opensanctions.rs
crates/argus-core/: Cargo.toml
crates/argus-core/src/: agent.rs  api_types.rs  config.rs  entity.rs  error.rs  extraction.rs  graph.rs  lib.rs  reasoning.rs
crates/argus-extraction/: Cargo.toml
crates/argus-extraction/src/: lib.rs  pipeline.rs
crates/argus-graph/: Cargo.toml
crates/argus-graph/src/: lib.rs  store.rs
crates/argus-reasoning/: Cargo.toml
crates/argus-reasoning/src/: engine.rs  lib.rs
crates/argus-server/: Cargo.toml
crates/argus-server/src/: main.rs  routes.rs  scheduler.rs  state.rs
crates/argus-server/src/handlers/: agents.rs  entities.rs  graph.rs  health.rs  mod.rs  reasoning.rs
crates/argus-tests/: Cargo.toml
crates/argus-tests/tests/: agent_integration.rs  api_integration.rs
extraction/: __init__.py  entities.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/entity/[id]/: page.tsx
frontend/app/graph/: page.tsx
frontend/app/map/: page.tsx
frontend/app/search/: page.tsx
frontend/app/timeline/: page.tsx
frontend/components/: Chat.tsx  Dashboard.tsx  EntityDetail.tsx  GraphViz.tsx  MapView.tsx  Navigation.tsx  Search.tsx  Timeline.tsx
frontend/lib/: api.ts
frontend/types/: argus.ts
graph/: __init__.py  store.py
reasoning/: __init__.py
