[project]
name = "argus"
version = "0.1.0"
description = "Open Source Global Intelligence Platform"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
dependencies = [
    "neo4j>=5.0",
    "qdrant-client>=1.7",
    "anthropic>=0.40",
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
