[package]
name = "argus-agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
argus-core = { path = "../argus-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
urlencoding = "2"
