[package]
name = "argus-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
argus-core = { path = "../argus-core" }
argus-agents = { path = "../argus-agents" }
argus-graph = { path = "../argus-graph" }
argus-extraction = { path = "../argus-extraction" }
argus-reasoning = { path = "../argus-reasoning" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { workspace = true }
chrono = { workspace = true }
