[package]
name = "argus-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
argus-core = { path = "../argus-core" }
argus-agents = { path = "../argus-agents" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
